PGOV-1003 fix skip link not showing when focused

--- a/web/themes/custom/cloudy/src/components/_skip-link.scss
+++ b/web/themes/custom/cloudy/src/components/_skip-link.scss
@@ -1,24 +1,17 @@
 /**
  * @file
- * Styles for the skip link.
+ * Styles for the "skip to main content" link.
  */
 
-.skip-link {
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-    -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
-    z-index: 1;
-    font-size: 1rem;
-    background: $cloudy-color-neutral-500;
-    line-height: $line-height-lg;
-    padding: 1px $cloudy-space-4 2px;
-    border-radius: 0 0 $border-radius-lg $border-radius-lg;
-    border-bottom-width: 0;
-    outline: 0;
-}
-
-.skip-link.visually-hidden.focusable:focus {
-    position: absolute !important;
-    color: $cloudy-color-neutral-0;
+.skip-link, .skip-link:hover {
+  background: $cloudy-color-neutral-500;
+  border-radius: 0 0 $border-radius-lg $border-radius-lg;
+  color: $cloudy-color-neutral-0;
+  left: 50%;
+  line-height: $line-height-lg;
+  outline: 0;
+  padding: 1px $cloudy-space-4 2px;
+  position: absolute;
+  transform: translateX(-50%);
+  z-index: 1;
 }
